# TelegaTagger

./: .gitignore  ask_from_history.py  auther.py  base_session.py  compile.cmd  compile.py  db.py  envs.py  json_converter.py  main.py  pyproject.toml  stories_sender.py  users_db.py
thon/: base_thon.py  starter.py  tagger.py
